--- a/trunk/LiberTV/LiberTV2005.vcproj
+++ b/trunk/LiberTV/LiberTV2005.vcproj
@@ -58,7 +58,7 @@
 				MinimalRebuild="true"
 				ExceptionHandling="2"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
+				RuntimeLibrary="3"
 				FloatingPointModel="0"
 				FloatingPointExceptions="false"
 				RuntimeTypeInfo="true"
@@ -191,6 +191,117 @@
 				IgnoreImportLibrary="true"
 				AdditionalDependencies="Iphlpapi.lib wininet.lib vfw32.lib dxerr8.lib winmm.lib urlmon.lib Strmiids.lib Quartz.lib Strmbasd.lib ws2_32.lib comsuppw.lib LTVUtil.lib LibTorrent.lib"
 				OutputFile="../bin/LiberTV.exe"
+				LinkIncremental="1"
+				AdditionalLibraryDirectories="../common/lib;../libtorrent.svn/Build/Release"
+				GenerateDebugInformation="true"
+				SubSystem="2"
+				OptimizeReferences="2"
+				EnableCOMDATFolding="2"
+				OptimizeForWindows98="1"
+				LinkTimeCodeGeneration="1"
+				SupportUnloadOfDelayLoadedDLL="true"
+				ImportLibrary="$(OutDir)/LiberTV.lib"
+				TargetMachine="1"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+				Description="Performing registration"
+				CommandLine="&quot;$(TargetPath)&quot; /RegServer"
+			/>
+		</Configuration>
+		<Configuration
+			Name="LupanarTV|Win32"
+			OutputDirectory="$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="1"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			UseOfATL="1"
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				PreprocessorDefinitions="NDEBUG"
+				MkTypLibCompatible="false"
+				TargetEnvironment="1"
+				GenerateStublessProxies="true"
+				TypeLibraryName="$(IntDir)/Liber2Player.tlb"
+				HeaderFileName="Liber2Player.h"
+				DLLDataFileName=""
+				InterfaceIdentifierFileName="Liber2Player_i.c"
+				ProxyFileName="Liber2Player_p.c"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				AdditionalOptions="/EHa"
+				Optimization="2"
+				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="1"
+				OmitFramePointers="true"
+				WholeProgramOptimization="true"
+				AdditionalIncludeDirectories="../common;../common/wtl;../LibTorrent.svn/include;../LibTorrent.svn/include/libtorrent;../libtorrent.svn/zlib"
+				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_CRT_SECURE_NO_DEPRECATE;NON_DLL_BUILD;LUPANAR"
+				ExceptionHandling="2"
+				RuntimeLibrary="0"
+				BufferSecurityCheck="false"
+				EnableEnhancedInstructionSet="0"
+				FloatingPointModel="0"
+				RuntimeTypeInfo="true"
+				UsePrecompiledHeader="2"
+				WarningLevel="3"
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="3"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="NDEBUG"
+				Culture="1049"
+				AdditionalIncludeDirectories="$(IntDir)"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				IgnoreImportLibrary="true"
+				AdditionalDependencies="Iphlpapi.lib wininet.lib vfw32.lib dxerr8.lib winmm.lib urlmon.lib Strmiids.lib Quartz.lib Strmbasd.lib ws2_32.lib comsuppw.lib LTVUtil.lib LibTorrent.lib"
+				OutputFile="../bin/LupanarTV.exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="../common/lib;../libtorrent.svn/Build/Release"
 				GenerateDebugInformation="true"
@@ -759,6 +870,14 @@
 						UsePrecompiledHeader="0"
 					/>
 				</FileConfiguration>
+				<FileConfiguration
+					Name="LupanarTV|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
 			</File>
 		</Filter>
 		<Filter
@@ -883,6 +1002,14 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="LupanarTV|Win32"
 					ExcludedFromBuild="true"
 					>
 					<Tool
@@ -1085,6 +1212,30 @@
 			<File
 				RelativePath="..\common\Metatorrent.cpp"
 				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="LupanarTV|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\mzdetour.cpp"
@@ -1127,6 +1278,14 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="1"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="LupanarTV|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
